--- a/app/src/main/res/layout/activity_animator.xml
+++ b/app/src/main/res/layout/activity_animator.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".activity.AnimatorActivity">
+    tools:context=".activity.advanced.AnimatorActivity">
 
     <Button
         android:id="@+id/btn_animator"
