--- a/app/src/main/res/layout/activity_card_view.xml
+++ b/app/src/main/res/layout/activity_card_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    tools:context=".activity.CardViewActivity">
+    tools:context=".activity.advanced.CardViewActivity">
 
     <LinearLayout
         android:id="@+id/ll_card"
