--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.ContactActivity">
+    tools:context=".activity.advanced.ContactActivity">
 
 
     <androidx.recyclerview.widget.RecyclerView
