--- a/app/src/main/res/layout/activity_custom_other_view.xml
+++ b/app/src/main/res/layout/activity_custom_other_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.CustomOtherViewActivity">
+    tools:context=".activity.advanced.CustomOtherViewActivity">
 
     <com.zrq.advancedlight.view.TitleBar
         android:id="@+id/title_bar"
