--- a/app/src/main/res/layout/activity_horizontal_view.xml
+++ b/app/src/main/res/layout/activity_horizontal_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.HorizontalViewActivity">
+    tools:context=".activity.advanced.HorizontalViewActivity">
 
     <com.zrq.advancedlight.view.HorizontalView
         android:id="@+id/horizontal_view"
