--- a/app/src/main/res/layout/activity_http.xml
+++ b/app/src/main/res/layout/activity_http.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.HttpActivity">
+    tools:context=".activity.advanced.HttpActivity">
 
     <Button
         android:id="@+id/btn_get"
