--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.ImageActivity">
+    tools:context=".activity.advanced.ImageActivity">
 
     <LinearLayout
         android:layout_width="400dp"
