--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".activity.MediaActivity">
+    tools:context=".activity.advanced.MediaActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
