--- a/app/src/main/res/layout/activity_note_content.xml
+++ b/app/src/main/res/layout/activity_note_content.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.NoteContentActivity">
+    tools:context=".activity.advanced.NoteContentActivity">
 
     <Button
         android:id="@+id/btn_get_note"
