--- a/app/src/main/res/layout/activity_ok_http.xml
+++ b/app/src/main/res/layout/activity_ok_http.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:paddingHorizontal="50dp"
     android:paddingVertical="10dp"
-    tools:context=".activity.OkHttpActivity">
+    tools:context=".activity.advanced.OkHttpActivity">
 
     <Button
         android:id="@+id/btn_ok_http_get"
