--- a/app/src/main/res/layout/activity_request_test.xml
+++ b/app/src/main/res/layout/activity_request_test.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.RequestTestActivity">
+    tools:context=".activity.advanced.RequestTestActivity">
 
     <Button
         android:id="@+id/btn_post_text"
