--- a/app/src/main/res/layout/activity_up_load_file.xml
+++ b/app/src/main/res/layout/activity_up_load_file.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.UpLoadFileActivity">
+    tools:context=".activity.advanced.UpLoadFileActivity">
 
     <Button
         android:id="@+id/btn_upload"
