--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,12 +6,16 @@
     <color name="teal_200">#9B3CCCBE</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="lightBlack">#BC000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="red">#FF0000</color>
+    <color name="bg">#F8F8F8</color>
+    <color name="red">#E91E63</color>
     <color name="pink">#F7A6A6</color>
     <color name="light_pink">#96F9A5A5</color>
     <color name="green">#9CFF98</color>
     <color name="light_green">#A79CFF98</color>
-    <color name="grey">#A7A1A1A1</color>
+    <color name="grey">#A7777777</color>
+    <color name="lightGrey">#A7E3E3E3</color>
+    <color name="transparent">#00FFFFFF</color>
 
 </resources>
