--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -14,9 +14,12 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <com.zrq.advancedlight.view.TabText
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:paddingStart="10dp"
+            android:paddingBottom="2dp"
             android:text="任务详情"
             android:textColor="@color/black"
             android:textStyle="bold" />
@@ -29,9 +32,12 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <com.zrq.advancedlight.view.TabText
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:paddingStart="10dp"
+            android:paddingBottom="2dp"
             android:text="设备状态"
             android:textColor="@color/black"
             android:textStyle="bold" />
@@ -45,18 +51,49 @@
                 android:id="@+id/tvNormal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="30dp"
-                android:paddingVertical="6dp"
-                android:text="正常" />
+                android:background="@drawable/select_btn_left"
+                android:paddingHorizontal="36dp"
+                android:paddingVertical="8dp"
+                android:text="正常"
+                android:textColor="@color/blue" />
 
             <TextView
                 android:id="@+id/tvError"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="30dp"
-                android:paddingVertical="6dp"
-                android:text="故障" />
+                android:background="@drawable/select_btn_right"
+                android:paddingHorizontal="36dp"
+                android:paddingVertical="8dp"
+                android:text="故障"
+                android:textColor="@color/blue" />
         </LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:visibility="gone"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="4dp"
+            tools:visibility="visible">
+
+            <LinearLayout
+                android:id="@+id/llCard"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/lightGrey"
+                android:padding="6dp">
+
+                <EditText
+                    android:id="@+id/etDesc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/transparent"
+                    android:hint="请输入问题描述"
+                    android:textSize="14sp" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
@@ -66,9 +103,12 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <com.zrq.advancedlight.view.TabText
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:paddingStart="10dp"
+            android:paddingBottom="2dp"
             android:text="拍照上传"
             android:textColor="@color/black"
             android:textStyle="bold" />
